--- a/EtuStackOverflow/Views/Home/Users.cshtml
+++ b/EtuStackOverflow/Views/Home/Users.cshtml
@@ -1,18 +1,4 @@
-﻿@{
-    
-    ViewData["Title"] = "Users Page";
-}
-<div class="col-lg-4 col-xl-3">
-    <div class="card">
-        <div class="card-body">
-            <div class="media align-items-center mb-4">
-                <img class="mr-3" src="C:\Users\omerf\OneDrive\Masaüstü\37bf9224-5286-447b-b6bd-380a5c204aeb.jpg" width="80" height="80" alt="">
-                <div class="media-body">
-                    <h3 class="mb-0">Pikamy Cha</h3>
-                    <p class="text-muted mb-0">Canada</p>
-                </div>
-            </div>
-        </div>
-    </div>
+﻿<div class="text-center">
+    <h1 class="display-4">Users</h1>
 </div>
 
