--- a/EtuStackOverflow/Views/Auth/Register.cshtml
+++ b/EtuStackOverflow/Views/Auth/Register.cshtml
@@ -52,11 +52,31 @@
                                         <input type="text" class="form-control" placeholder="Name" required>
                                     </div>
                                     <div class="form-group">
+                                        <input type="text" class="form-control" placeholder="User Name" required>
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" placeholder="Date of birth" required>
+                                    </div>
+                                    <div class="form-group">
                                         <input type="email" class="form-control" placeholder="Email" required>
                                     </div>
                                     <div class="form-group">
                                         <input type="password" class="form-control" placeholder="Password" required>
                                     </div>
+                                    <div class="form-group">
+                                        <input type="password" class="form-control" placeholder="Password" required>
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" placeholder="Faculty" required>
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" placeholder="Department" required>
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" placeholder="Class" required>
+                                    </div>
+                                    
+                                    
                                     <button class="btn login-form__btn submit w-100">Register</button>
                                 </form>
                                 <p class="mt-5 login-form__footer">Have account <a href="/Auth/Login" class="text-primary">Login </a> now</p>
