--- a/EtuStackOverflow/Views/Shared/_Layout.cshtml
+++ b/EtuStackOverflow/Views/Shared/_Layout.cshtml
@@ -8,12 +8,21 @@
     <title>@ViewData["Title"] - EtuStackOverflow</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/EtuStackOverflow.styles.css" asp-append-version="true" />
+
+    <!--Site iconu-->
+    <link rel="icon" type="image/png" sizes="16x16" href="~/images/favicon.png">
+
     <link href="~/css/style.css" rel="stylesheet">
+    <link href="~/plugins/pg-calendar/css/pignose.calendar.min.css" rel="stylesheet">
+    <!-- Chartist -->
+    <link rel="stylesheet" href="~/plugins/chartist/css/chartist.min.css">
+    <link rel="stylesheet" href="~/plugins/chartist-plugin-tooltips/css/chartist-plugin-tooltip.css">
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+    <header class="pb-5">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow fixed-top">
             <div class="container-fluid">
+                <img class="mr-3" src="~/images/logo.jpg" width="50" height="50" alt="Logo">
                 <span class="navbar-brand fw-bold">EtuStackOverflow</span>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-center align-items-center">
                     <ul class="navbar-nav gap-5">
@@ -31,20 +40,25 @@
                         </li>
                     </ul>
                 </div>
+                <div class="d-flex justify-content-end">
+                    <a type="button" class="btn btn-primary me-1" href="/auth/login">Login</a>
+                    <a type="button" class="btn btn-primary" href="/auth/register" >Register</a>
+                </div>
             </div>
         </nav>
     </header>
-    <div class="container">
-        <main role="main" class="pb-3">
+    <div class="main-content pt-5 pb-4">
+        <div class="container-fluid">
             @RenderBody()
-        </main>
+        </div>
     </div>
 
-    <footer class="border-top footer text-muted d-flex justify-content-center">
-        <div>
-            &copy; 2024 - EtuStackOverflow
+    <div class="bg-white p-2 d-flex justify-content-center align-items-center fixed-bottom">
+        <div class="copyright">
+            <span>Copyright &copy; 2024 - EtuStackOverflow</span>
         </div>
-    </footer>
+    </div>
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/plugins/common/common.min.js"></script>
