bi şey yapmadım

--- a/EtuStackOverflow/Views/Home/Profile.cshtml
+++ b/EtuStackOverflow/Views/Home/Profile.cshtml
@@ -64,7 +64,7 @@
             <div class="card">
                 <div class="card-body">
                     <div class="media media-reply">
-                        <img class="mr-3 circle-rounded" src="~/images/avatar/2.jpg" width="50" height="50" alt="Generic placeholder image">
+                        <img class="mr-3 circle-rounded" src="~/images/avatar/indir.png" width="50" height="50" alt="Generic placeholder image">
                         <div class="media-body">
                             <div class="d-sm-flex justify-content-between mb-2">
                                 <h5 class="mb-sm-0">FurqanSama <small class="text-muted ml-3">about 3 days ago</small></h5>
