--- a/EtuStackOverflow/Views/Home/Profile.cshtml
+++ b/EtuStackOverflow/Views/Home/Profile.cshtml
@@ -33,7 +33,7 @@
                         <div class="card card-profile text-center">
                             <span class="mb-1 text-warning"></i></span>
                             <h3 class="mb-0">263</h3>
-                            <p class="text-muted">interactions</p>
+                            <p class="text-muted">Interactions</p>
                         </div>
                     </div>
 
@@ -63,77 +63,49 @@
                             Anakart uzerine ekran kartini...
                         </h7>
                     </div>
-
-            <div class="card">
-                <div class="card-body">
-                    <div class="media media-reply">
-                        <img class="mr-3 circle-rounded" src="~/images/avatar/2.jpg" width="50" height="50" alt="Generic placeholder image">
-                        <div class="media-body">
-                            <div class="d-sm-flex justify-content-between mb-2">
-                                <h5 class="mb-sm-0">FurqanSama <small class="text-muted ml-3">about 3 days ago</small></h5>
-                                <div class="media-reply__link">
-                                    <button class="btn btn-transparent p-0 mr-3"><i class="fa fa-thumbs-up"></i></button>
-                                    <button class="btn btn-transparent p-0 mr-3"><i class="fa fa-thumbs-down"></i></button>
-                                    <button class="btn btn-transparent text-dark font-weight-bold p-0 ml-2">Report</button>
-                                </div>
-                            </div>
-                            <h7>
-                                You are very clever
-                            </h7>
-                        </div>
-                    </div>
                 </div>
             </div>
-            <div class="card">
-                <div class="card-body">
-                    <div class="media media-reply">
-                        <img class="mr-3 circle-rounded" src="~/images/avatar/2.jpg" width="50" height="50" alt="Generic placeholder image">
-                        <div class="media-body">
-                            <div class="d-sm-flex justify-content-between mb-2">
-                                <h5 class="mb-sm-0">Ibrahim Halil Fire <small class="text-muted ml-3">about 3 days ago</small></h5>
-                                <div class="media-reply__link">
-                                    <button class="btn btn-transparent p-0 mr-3"><i class="fa fa-thumbs-up"></i></button>
-                                    <button class="btn btn-transparent p-0 mr-3"><i class="fa fa-thumbs-down"></i></button>
-                                    <button class="btn btn-transparent text-dark font-weight-bold p-0 ml-2">Report</button>
-                                </div>
+        </div>
+    </div>
+    <div class="col-md-4">
+        <div class="card">
+            <div class="card-header d-flex justify-content-center align-items-center">
+                <h3 class="card-title">
+                    Your Interactions
+                </h3>
+            </div>
+            <div class="card-body">
+                <div class="media media-reply">
+                    <img class="mr-3 circle-rounded" src="~/images/avatar/2.jpg" width="50" height="50" alt="Generic placeholder image">
+                    <div class="media-body">
+                        <div class="d-sm-flex justify-content-between mb-2">
+                            <h5 class="mb-sm-0">Ibrahim Halil Fire <small class="text-muted ml-3">about 3 days ago</small></h5>
+                            <div class="media-reply__link">
+                                <button class="btn btn-transparent p-0 mr-3"><i class="fa fa-thumbs-up"></i></button>
+                                <button class="btn btn-transparent p-0 mr-3"><i class="fa fa-thumbs-down"></i></button>
+                                <button class="btn btn-transparent text-dark font-weight-bold p-0 ml-2">Report</button>
                             </div>
-                            <h7>This profile is awesome</h7>
                         </div>
+                        <h7>This profile is awesome</h7>
                     </div>
                 </div>
-            </div>
-            <div class="card">
-                <div class="card-body">
-                    <div class="media media-reply">
-                        <img class="mr-3 circle-rounded" src="~/images/avatar/2.jpg" width="50" height="50" alt="Generic placeholder image">
-                        <div class="media-body">
-                            <div class="d-sm-flex justify-content-between mb-2">
-                                <h5 class="mb-sm-0">TheAmazingOmer28 <small class="text-muted ml-3">about 3 days ago</small></h5>
-                                <div class="media-reply__link">
-                                    <button class="btn btn-transparent p-0 mr-3"><i class="fa fa-thumbs-up"></i></button>
-                                    <button class="btn btn-transparent p-0 mr-3"><i class="fa fa-thumbs-down"></i></button>
-                                    <button class="btn btn-transparent text-dark font-weight-bold p-0 ml-2">Report</button>
-                                </div>
+                <div class="media media-reply">
+                    <img class="mr-3 circle-rounded" src="~/images/avatar/2.jpg" width="50" height="50" alt="Generic placeholder image">
+                    <div class="media-body">
+                        <div class="d-sm-flex justify-content-between mb-2">
+                            <h5 class="mb-sm-0">TheAmazingOmer28 <small class="text-muted ml-3">about 3 days ago</small></h5>
+                            <div class="media-reply__link">
+                                <button class="btn btn-transparent p-0 mr-3"><i class="fa fa-thumbs-up"></i></button>
+                                <button class="btn btn-transparent p-0 mr-3"><i class="fa fa-thumbs-down"></i></button>
+                                <button class="btn btn-transparent text-dark font-weight-bold p-0 ml-2">Report</button>
                             </div>
-                            <h7>
-                                Thanks for your help
-                            </h7>
                         </div>
+                        <h7>
+                            Thanks for your help
+                        </h7>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<!-- #/ container -->
-        </div>
-<!--**********************************
-    Content body end
-***********************************-->
-    </div>
-<!--**********************************
-    Main wrapper end
-***********************************-->
-<!--**********************************
-    Scripts
-***********************************-->
