--- a/EtuStackOverflow/Views/Shared/_Layout.cshtml
+++ b/EtuStackOverflow/Views/Shared/_Layout.cshtml
@@ -22,7 +22,9 @@
     <header class="pb-5">
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow fixed-top">
             <div class="container-fluid">
+                <a href="/Home">
                 <img class="mr-3" src="~/images/logo.jpg" width="50" height="50" alt="Logo">
+                </a>
                 <span class="navbar-brand fw-bold">EtuStackOverflow</span>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-center align-items-center">
                     <ul class="navbar-nav gap-5">
