Home sayfası tasarımına başlandı.

--- a/EtuStackOverflow/Views/Shared/_Layout.cshtml
+++ b/EtuStackOverflow/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="~/EtuStackOverflow.styles.css" asp-append-version="true" />
 
     <!--Site iconu-->
-    <link rel="icon" type="image/png" sizes="16x16" href="~/images/favicon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="~/images/logo.jpg">
 
     <link href="~/css/style.css" rel="stylesheet">
     <link href="~/plugins/pg-calendar/css/pignose.calendar.min.css" rel="stylesheet">
@@ -68,6 +68,7 @@
     <script src="~/js/settings.js"></script>
     <script src="~/js/gleek.js"></script>
     <script src="~/js/styleSwitcher.js"></script>
+    <script src="~/./js/dashboard/dashboard-2.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
