--- a/EtuStackOverflow/Views/Home/Index.cshtml
+++ b/EtuStackOverflow/Views/Home/Index.cshtml
@@ -1,9 +1,67 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿
+<div class="container-fluid">
+    <div class="row justify-content-center">
+        <div class="col-3">
+            <div class="card card-widget">
+                <div class="card-body gradient-4">
+                    <div class="media">
+                        <span class="card-widget__icon"><i class="icon-tag"></i></span>
+                        <div class="media-body">
+                            <h2 class="card-widget__title">+300</h2>
+                            <h5 class="card-widget__subtitle">Questions</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-<div class="text-center">
-    <h1 class="display-4" >Welcome</h1>
-    <button class="display-4 d-none" >Edit Profile</button>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+        <div class="col-3">
+            <div class="card card-widget">
+                <div class="card-body gradient-4">
+                    <div class="media">
+                        <span class="card-widget__icon"><i class="icon-emotsmile"></i></span>
+                        <div class="media-body">
+                            <h2 class="card-widget__title">176</h2>
+                            <h5 class="card-widget__subtitle">Resolved Question</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-3">
+            <div class="card card-widget">
+                <div class="card-body gradient-9">
+                    <div class="media">
+                        <span class="card-widget__icon"><i class="icon-ghost"></i></span>
+                        <div class="media-body">
+                            <h2 class="card-widget__title">+420</h2>
+                            <h5 class="card-widget__subtitle">Users</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="p-wrapper pt128 pb24 ta-center mx-auto animate-children" style="text-align: center;" data-v-16d71f73="">
+            <h1 style="font-size: 24px;" class="p-lh-sm p-ff-roboto-slab mb32 wmx12 mx-auto">
+                Dünyayı teknoloji geliştirme konusunda güçlendiriyoruz <strong>Sen de bize katıl</strong>.
+            </h1>
+
+            <p class="fc-black-500 fs-title wmx5 mb64 mx-auto" data-v-16d71f73="">
+                insanların işte veya evde sorular sormasını, paylaşmasını ve öğrenmesini istiyoruz.
+            </p>
+        </div>
+
+        <div class="row justify-content-center">
+            <div class="col-6">
+                <div class="card card-widget">
+                    <div class="card-body">
+                        <img src="~/images/ETU.jpg" alt="AnaSayfaResim" class="card-img-top">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
 </div>
