profile icon ekledi sag ust koseye

--- a/EtuStackOverflow/Views/Home/Index.cshtml
+++ b/EtuStackOverflow/Views/Home/Index.cshtml
@@ -1,67 +1,139 @@
 ﻿
-<div class="container-fluid">
+<div class="row justify-content-center">
+    <div class="col-3">
+        <div class="card card-widget">
+            <div class="card-body gradient-4">
+                <div class="media">
+                    <span class="card-widget__icon"><i class="icon-tag"></i></span>
+                    <div class="media-body">
+                        <h2 class="card-widget__title">+300</h2>
+                        <h5 class="card-widget__subtitle">Questions</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-3">
+        <div class="card card-widget">
+            <div class="card-body gradient-4">
+                <div class="media">
+                    <span class="card-widget__icon"><i class="icon-emotsmile"></i></span>
+                    <div class="media-body">
+                        <h2 class="card-widget__title">176</h2>
+                        <h5 class="card-widget__subtitle">Resolved Question</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-3">
+        <div class="card card-widget">
+            <div class="card-body gradient-9">
+                <div class="media">
+                    <span class="card-widget__icon"><i class="icon-ghost"></i></span>
+                    <div class="media-body">
+                        <h2 class="card-widget__title">+420</h2>
+                        <h5 class="card-widget__subtitle">Users</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="p-wrapper pt128 pb24 ta-center mx-auto animate-children" style="text-align: center;" data-v-16d71f73="">
+        <h1 style="font-size: 24px;" class="p-lh-sm p-ff-roboto-slab mb32 wmx12 mx-auto">
+            Dünyayı teknoloji geliştirme konusunda güçlendiriyoruz <strong>Sen de bize katıl</strong>.
+        </h1>
+
+        <p class="fc-black-500 fs-title wmx5 mb64 mx-auto" data-v-16d71f73="">
+            insanların işte veya evde sorular sormasını, paylaşmasını ve öğrenmesini istiyoruz.
+        </p>
+    </div>
+
+    <div class="row">
+        <div class="col-lg-6">
+            <div class="card">
+                <div class="card-body">
+                    <h4 class="card-title">Burakhan Kurt</h4>
+                    <div class="bootstrap-media">
+                        <div class="media">
+                            <img class="mr-3 img-fluid" src="~/images/founderavatar/burakhankurt.jpeg" height="250" width="250" alt="Burakhan Kurt">
+                            <div class="media-body">
+                                <p>
+                                    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi
+                                    vulputate fringilla. Donec lacinia congue felis in faucibus.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-6">
+            <div class="card">
+                <div class="card-body">
+                    <h4 class="card-title">Omer Faruk Soydemir</h4>
+                    <div class="bootstrap-media">
+                        <div class="media">
+                            <img class="mr-3 img-fluid" src="~/images/founderavatar/omerfaruksoydemir.jpeg" height="250" width="250" alt="Omer Faruk Soydemir">
+                            <div class="media-body">
+                                <p>
+                                    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi
+                                    vulputate fringilla. Donec lacinia congue felis in faucibus.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-6">
+            <div class="card">
+                <div class="card-body">
+                    <h4 class="card-title">Muhammed Furkan Conoglu</h4>
+                    <div class="bootstrap-media">
+                        <div class="media">
+                            <img class="mr-3 img-fluid" src="~/images/founderavatar/furkancohnoglu.jpeg" height="250" width="250" alt="Muhammed Furkan Conoglu">
+                            <div class="media-body">
+                                <p>
+                                    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi
+                                    vulputate fringilla. Donec lacinia congue felis in faucibus.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-6">
+            <div class="card">
+                <div class="card-body">
+                    <h4 class="card-title">Ibrahim Halil Ates</h4>
+                    <div class="bootstrap-media">
+                        <div class="media">
+                            <img class="mr-3 img-fluid" src="~/images/founderavatar/ibrahimhates.jpg" height="250" width="250" alt="Ibrahim Halil Ates">
+                            <div class="media-body">
+                                <p>
+                                    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi
+                                    vulputate fringilla. Donec lacinia congue felis in faucibus.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="row justify-content-center">
-        <div class="col-3">
+        <div class="col-6">
             <div class="card card-widget">
-                <div class="card-body gradient-4">
-                    <div class="media">
-                        <span class="card-widget__icon"><i class="icon-tag"></i></span>
-                        <div class="media-body">
-                            <h2 class="card-widget__title">+300</h2>
-                            <h5 class="card-widget__subtitle">Questions</h5>
-                        </div>
-                    </div>
+                <div class="card-body">
+                    <img src="~/images/ETU.jpg" alt="AnaSayfaResim" class="card-img-top">
                 </div>
             </div>
         </div>
-
-        <div class="col-3">
-            <div class="card card-widget">
-                <div class="card-body gradient-4">
-                    <div class="media">
-                        <span class="card-widget__icon"><i class="icon-emotsmile"></i></span>
-                        <div class="media-body">
-                            <h2 class="card-widget__title">176</h2>
-                            <h5 class="card-widget__subtitle">Resolved Question</h5>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-3">
-            <div class="card card-widget">
-                <div class="card-body gradient-9">
-                    <div class="media">
-                        <span class="card-widget__icon"><i class="icon-ghost"></i></span>
-                        <div class="media-body">
-                            <h2 class="card-widget__title">+420</h2>
-                            <h5 class="card-widget__subtitle">Users</h5>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="p-wrapper pt128 pb24 ta-center mx-auto animate-children" style="text-align: center;" data-v-16d71f73="">
-            <h1 style="font-size: 24px;" class="p-lh-sm p-ff-roboto-slab mb32 wmx12 mx-auto">
-                Dünyayı teknoloji geliştirme konusunda güçlendiriyoruz <strong>Sen de bize katıl</strong>.
-            </h1>
-
-            <p class="fc-black-500 fs-title wmx5 mb64 mx-auto" data-v-16d71f73="">
-                insanların işte veya evde sorular sormasını, paylaşmasını ve öğrenmesini istiyoruz.
-            </p>
-        </div>
-
-        <div class="row justify-content-center">
-            <div class="col-6">
-                <div class="card card-widget">
-                    <div class="card-body">
-                        <img src="~/images/ETU.jpg" alt="AnaSayfaResim" class="card-img-top">
-                    </div>
-                </div>
-            </div>
-        </div>
-
     </div>
 </div>
