--- a/EtuStackOverflow/Views/Shared/_Layout.cshtml
+++ b/EtuStackOverflow/Views/Shared/_Layout.cshtml
@@ -26,28 +26,61 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow fixed-top">
             <div class="container-fluid">
                 <a href="/Home">
-                <img class="mr-3" src="~/images/logo.jpg" width="50" height="50" alt="Logo">
+                    <img class="mr-3" src="~/images/logo.jpg" width="50" height="50" alt="Logo">
                 </a>
                 <span class="navbar-brand fw-bold">EtuStackOverflow</span>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-center align-items-center">
                     <ul class="navbar-nav gap-5">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">
+                                <span class="fs-5">
+                                    Home
+                                </span>
+                            </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Questions">Questions</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Questions">
+                                <span class="fs-5">
+                                    Questions
+                                </span>
+                            </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Users">Users</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Users">
+                                <span class="fs-5">
+                                    Users
+                                </span>
+                            </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Profile">Profile</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Profile">
+                                <span class="fs-5">
+                                    Profile
+                                </span>
+                            </a>
                         </li>
                     </ul>
                 </div>
-                <div class="d-flex justify-content-end">
-                    <a type="button" class="btn btn-outline-dark me-1" href="/auth/login">Login</a>
-                    <a type="button" class="btn btn-outline-dark" href="/auth/register" >Register</a>
+                <div class="d-flex justify-content-end align-items-center">
+                     <a type="button" class="btn btn-outline-dark me-1" href="/auth/login">Login</a>
+                    <a type="button" class="btn btn-outline-dark" href="/auth/register">Register</a>
+
+                    @* <div class="icons dropdown">
+                        <div class="user-img c-pointer position-relative" data-toggle="dropdown">
+                            <span class="activity active"></span>
+                            <img src="~/images/avatar/11.png" height="40" width="40" alt="">
+                        </div>
+                        <div class="drop-down dropdown-profile dropdown-menu">
+                            <div class="dropdown-content-body">
+                                <ul>
+                                    <li>
+                                        <a href="/Home/Profile"><i class="icon-user"></i> <span>Profile</span></a>
+                                    </li>
+                                    <li><a href="/Auth/Login"><i class="icon-key"></i> <span>Logout</span></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div> *@
                 </div>
             </div>
         </nav>
@@ -61,13 +94,13 @@
         </div>
     </div>
 
-    <div class="main-content pt-5 pb-4">
+    <div class="main-content pt-5 pb-5">
         <div class="container-fluid">
             @RenderBody()
         </div>
     </div>
 
-    <div class="bg-white p-2 d-flex justify-content-center align-items-center fixed-bottom">
+    <div class="bg-white p-3 d-flex justify-content-center align-items-center fixed-bottom">
         <div class="copyright">
             <span>Copyright &copy; 2024 - EtuStackOverflow</span>
         </div>
