--- a/EtuStackOverflow/Views/Home/Index.cshtml
+++ b/EtuStackOverflow/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
 <div class="row justify-content-center">
     <div class="col-3">
         <div class="card card-widget">
-            <div class="card-body gradient-4">
+            <div class="card-body shadow-lg">
                 <div class="media">
                     <span class="card-widget__icon"><i class="icon-tag"></i></span>
                     <div class="media-body">
@@ -16,7 +16,7 @@
 
     <div class="col-3">
         <div class="card card-widget">
-            <div class="card-body gradient-4">
+            <div class="card-body shadow-lg">
                 <div class="media">
                     <span class="card-widget__icon"><i class="icon-emotsmile"></i></span>
                     <div class="media-body">
@@ -30,7 +30,7 @@
 
     <div class="col-3">
         <div class="card card-widget">
-            <div class="card-body gradient-9">
+            <div class="card-body shadow-lg">
                 <div class="media">
                     <span class="card-widget__icon"><i class="icon-ghost"></i></span>
                     <div class="media-body">
@@ -113,7 +113,7 @@
                     <h4 class="card-title">Ibrahim Halil Ates</h4>
                     <div class="bootstrap-media">
                         <div class="media">
-                            <img class="mr-3 img-fluid" src="~/images/founderavatar/ibrahimhates.jpg" height="250" width="250" alt="Ibrahim Halil Ates">
+                            <img class="mr-3 img-fluid" src="~/images/founderavatar/ibrahimhates.png" height="250" width="250" alt="Ibrahim Halil Ates">
                             <div class="media-body">
                                 <p>
                                     Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi
