--- a/EtuStackOverflow/Views/Shared/_Layout.cshtml
+++ b/EtuStackOverflow/Views/Shared/_Layout.cshtml
@@ -32,29 +32,29 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-center align-items-center">
                     <ul class="navbar-nav gap-5">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">
-                                <span class="fs-5">
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">
+                                <span class="fs-5 fw-bold">
                                     Home
                                 </span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Questions">
-                                <span class="fs-5">
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Questions">
+                                <span class="fs-5 fw-bold">
                                     Questions
                                 </span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Users">
-                                <span class="fs-5">
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Users">
+                                <span class="fs-5 fw-bold">
                                     Users
                                 </span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Profile">
-                                <span class="fs-5">
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Profile">
+                                <span class="fs-5 fw-bold">
                                     Profile
                                 </span>
                             </a>
