Users Page Done

--- a/EtuStackOverflow/Views/Shared/_Layout.cshtml
+++ b/EtuStackOverflow/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
 </head>
 <body>
     <header class="pb-5">
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow fixed-top">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow fixed-top shadow-lg">
             <div class="container-fluid">
                 <a href="/Home">
                     <img class="mr-3" src="~/images/logo.jpg" width="50" height="50" alt="Logo">
@@ -94,13 +94,13 @@
         </div>
     </div>
 
-    <div class="main-content pt-5 pb-5">
+    <div class="main-content pt-5">
         <div class="container-fluid">
             @RenderBody()
         </div>
     </div>
 
-    <div class="bg-white p-3 d-flex justify-content-center align-items-center fixed-bottom">
+    <div class="bg-white p-3 d-flex justify-content-center align-items-center ">
         <div class="copyright">
             <span>Copyright &copy; 2024 - EtuStackOverflow</span>
         </div>
