--- a/EtuStackOverflow/Views/Auth/Login.cshtml
+++ b/EtuStackOverflow/Views/Auth/Login.cshtml
@@ -46,10 +46,10 @@
 
                                 <form class="mt-5 mb-5 login-input">
                                     <div class="form-group">
-                                        <input type="email" class="form-control" placeholder="Email">
+                                        <input required type="email" class="form-control" placeholder="Email">
                                     </div>
                                     <div class="form-group">
-                                        <input type="password" class="form-control" placeholder="Password">
+                                        <input required type="password" class="form-control" placeholder="Password">
                                     </div>
                                     <div class="form-group">
                                         <a href="/Auth/ForgetPassword" style="font-size:12px"> Forgot Password?</a>
