--- a/EtuStackOverflow/Views/Shared/_Layout.cshtml
+++ b/EtuStackOverflow/Views/Shared/_Layout.cshtml
@@ -100,7 +100,7 @@
         </div>
     </div>
 
-    <div class="bg-white p-3 d-flex justify-content-center align-items-center ">
+    <div class="bg-white p-3 d-flex justify-content-center align-items-center">
         <div class="copyright">
             <span>Copyright &copy; 2024 - EtuStackOverflow</span>
         </div>
@@ -114,6 +114,7 @@
     <script src="~/js/gleek.js"></script>
     <script src="~/js/styleSwitcher.js"></script>
     <script src="~/js/profile/profiledatalist.js"></script>
+    <script src="~/js/user/userscript.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
