--- a/EtuStackOverflow/Views/Home/Profile.cshtml
+++ b/EtuStackOverflow/Views/Home/Profile.cshtml
@@ -49,7 +49,7 @@
                 </h3>
             </div>
             <div class="card-body">
-                <div class="media media-reply pb-2" v-for="(question, index) in profileQuestionData" :key="index">
+                <div class="media media-reply pb-2" v-for="(question) in profileQuestionData" :key="question.id">
                     <div class="media-body">
                         <div class="d-sm-flex justify-content-between mb-2">
                             <div>
