--- a/EtuStackOverflow/Views/Home/Profile.cshtml
+++ b/EtuStackOverflow/Views/Home/Profile.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Profile";
 }
 
-<div class="row ps-5" id="profileList" ref="profileList">
+<div class="row" id="profileList" ref="profileList">
     <div class="col-md-3">
         <div class="card">
             <div class="card-body">
@@ -67,7 +67,7 @@
             </div>
         </div>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-5">
         <div class="card">
             <div class="card-header d-flex justify-content-center align-items-center">
                 <h3 class="card-title">
