--- a/EtuStackOverflow/Views/Shared/_Layout.cshtml
+++ b/EtuStackOverflow/Views/Shared/_Layout.cshtml
@@ -22,6 +22,7 @@
     <script src="https://cdn.jsdelivr.net/npm/moment/moment.min.js"></script>
 </head>
 <body>
+    <img src="~/images/bg/bg-logo.png" class="position-absolute top-50 start-50 translate-middle">
     <header class="pb-5">
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow fixed-top shadow-lg">
             <div class="container-fluid">
@@ -62,24 +63,24 @@
                     </ul>
                 </div>
                 <div class="d-flex justify-content-end align-items-center">
-                     <a type="button" class="btn btn-outline-dark me-1" href="/auth/login">Login</a>
+                    <a type="button" class="btn btn-outline-dark me-1" href="/auth/login">Login</a>
                     <a type="button" class="btn btn-outline-dark" href="/auth/register">Register</a>
 
                     @* <div class="icons dropdown">
-                        <div class="user-img c-pointer position-relative" data-toggle="dropdown">
-                            <span class="activity active"></span>
-                            <img src="~/images/avatar/11.png" height="40" width="40" alt="">
-                        </div>
-                        <div class="drop-down dropdown-profile dropdown-menu">
-                            <div class="dropdown-content-body">
-                                <ul>
-                                    <li>
-                                        <a href="/Home/Profile"><i class="icon-user"></i> <span>Profile</span></a>
-                                    </li>
-                                    <li><a href="/Auth/Login"><i class="icon-key"></i> <span>Logout</span></a></li>
-                                </ul>
-                            </div>
-                        </div>
+                    <div class="user-img c-pointer position-relative" data-toggle="dropdown">
+                    <span class="activity active"></span>
+                    <img src="~/images/avatar/11.png" height="40" width="40" alt="">
+                    </div>
+                    <div class="drop-down dropdown-profile dropdown-menu">
+                    <div class="dropdown-content-body">
+                    <ul>
+                    <li>
+                    <a href="/Home/Profile"><i class="icon-user"></i> <span>Profile</span></a>
+                    </li>
+                    <li><a href="/Auth/Login"><i class="icon-key"></i> <span>Logout</span></a></li>
+                    </ul>
+                    </div>
+                    </div>
                     </div> *@
                 </div>
             </div>
@@ -94,7 +95,7 @@
         </div>
     </div>
 
-    <div class="main-content pt-5">
+    <div class="main-content pt-5 min-vh-100">
         <div class="container-fluid">
             @RenderBody()
         </div>
